Fix the JSON in package.json
The trailing comma prevents this from being processed as valid JSON and hence this package cannot be installed via npm

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [ "pubnub", "node", "client" ],
   "author": "Sébastien Arnaud <arnaudsj@gmail.com>",
   "contributors": [
-    { "name": "Justin Vincent", "web": "http://techzinglive.com" },
+    { "name": "Justin Vincent", "web": "http://techzinglive.com" }
   ],
   "licenses": [ "MIT" ],
   "repositories": {
